16.(Internal) System can now cache commonly used world searches.  See NOCACHE in coffeemud.ini to turn it off!
17.Bugs fixed in conventional manner.
# Build 5.7.8 Release 09/09/2012
1. Fixed the statistics bug
2. Fixed a bug with variables in Scriptable MPTITLE command
3. Fixed numerous prayers that did not respect elemental immunity/resistance
4. Arcanist Spellcrafted abilities persist over reboots
5. Children now track their number of high-level parents to which benefits are tied to, and can repick their stats and class.
# Build 5.7.9 Release 09/10/2012
1. FakeDB now supports getResultSetMetaData, making room for some sort of sql browser feature
2. CoffeeMud (actually fakedb) is now build compatible with JDK 1.7
3. Fixed a nasty bug in CMParms -- you do not want 5.7.8!
# Build 5.7.10 Release ??/??/2012
1. (Minor) ResourceOverride is now an ActiveTicker for better control over its behavior.  Also, room types bug fixed.
2. New INI entries for whitelisting over ip/login/newplayer blocks: WHITELISTIPSCONN, WHITELISTLOGINS, WHITELISTIPSNEWPLAYERS
3. Special GET case: Can now get parts of a bundle from a container -- get 2 oak from wagon will break a 2# bundle from inside in a wagon.
4. Carpentry skills list underwent a little makeover.
5. I3 LISTEN/SILENCE can be used by i3 admins to test out other channels... if you turn one on, be sure to turn it off before you leave!
6. (internal) XMLManager optomized for More Speed!
7. Missing INI entry (WRNMSGS) now added and documented.
8. New Property (Prop_RoomList) -- more lightweight way to keep rooms from going dark at night (pun intended).
9. New Skill (Urban Tactics)
10.New Clan Trophies: Most Members, and Highest Median Member Level
11.Pregnancy will fail if either participant is exhausted or below 1/2 movement.  A message was added so the players know.
12.Arcanists can LOOK at wand charges at level 30.
13.Common Skills now support "STOP" to cancel.